# advent-of-code-2021

./: Cargo.toml  LICENSE
01/src/: main.rs
02/src/: main.rs
03/src/: main.rs
04/src/: main.rs
05/src/: main.rs
06/src/: main.rs
07/src/: main.rs
08/src/: main.rs
09/src/: main.rs
10/src/: main.rs
11/src/: main.rs
12/src/: main.rs
13/src/: main.rs
14/src/: main.part1.rs  main.part2.rs
15/src/: main.rs
16/examples/: main.rs
16/src/: main.rs
16/src/packet/: factory.rs  header.rs  literal.rs  mod.rs  operator.rs  traits.rs
17/src/: main.rs
18/src/: main.rs
19/src/: main.rs
19/src/scanner/: mod.rs
19/src/utils/: mod.rs
20/src/: main.rs
21/src/: main.part1.rs  main.part2.rs
22/src/: main.rs
22/src/reactor/: mod.rs
22/src/reboot/: mod.rs
23/src/: main.rs
23/src/borrow/: mod.rs
23/src/diagram/: mod.rs
24/src/: main.rs
25/src/: main.rs
