[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sonar-sweep"
path = "01/src/main.rs"

[[bin]]
name = "dive"
path = "02/src/main.rs"

[[bin]]
name = "binary-diagnostic"
path = "03/src/main.rs"

[[bin]]
name = "giant-squid"
path = "04/src/main.rs"

[[bin]]
name = "hydrothermal-venture"
path = "05/src/main.rs"

[[bin]]
name = "lanternfish"
path = "06/src/main.rs"

[[bin]]
name = "the-treachery-of-whales"
path = "07/src/main.rs"

[[bin]]
name = "seven-segment-search"
path = "08/src/main.rs"

[[bin]]
name = "smoke-basin"
path = "09/src/main.rs"

[[bin]]
name = "syntax-scoring"
path = "10/src/main.rs"

[[bin]]
name = "dumbo-octopus"
path = "11/src/main.rs"

[[bin]]
name = "passage-pathing"
path = "12/src/main.rs"

[[bin]]
name = "transparent-origami"
path = "13/src/main.rs"

[[bin]]
name = "extended-polymerization-part1"
path = "14/src/main.part1.rs"

[[bin]]
name = "extended-polymerization-part2"
path = "14/src/main.part2.rs"

[[bin]]
name = "chiton"
path = "15/src/main.rs"

[[bin]]
name = "packet-decoder"
path = "16/src/main.rs"

[[bin]]
name = "trick-shot"
path = "17/src/main.rs"

[[bin]]
name = "snailfish"
path = "18/src/main.rs"

[[bin]]
name = "beacon-scanner"
path = "19/src/main.rs"

[[bin]]
name = "trench-map"
path = "20/src/main.rs"

[[bin]]
name = "dirac-dice-part1"
path = "21/src/main.part1.rs"

[[bin]]
name = "dirac-dice-part2"
path = "21/src/main.part2.rs"

[dependencies]
grid = "*"
itertools = "*"
priority-queue = "*"
nalgebra = "*"
num = "*"
sorted-vec = "*"
phf = { version = "*", features = ["macros"] }
regex = "*"
